Changed the image in the proejct section

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/jc.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="My personal portfolio website." />
@@ -14,28 +14,3 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
-<!-- [[redirects]]
-  from = "/comp4537/lab00/*"
-  to = "https://comp4537lab00.netlify.app/:splat"
-  status = 200
-  force = true
-
-[[redirects]]
-  from = "/comp4537/lab01/*"
-  to = "https://comp4537lab01.netlify.app/:splat"
-  status = 200
-  force = true
-
-[[redirects]]
-  from = "/smart-grocery-shopping-app/*"
-  to = "https://smart-grocery-shopping-app.netlify.app/:splat"
-  status = 200
-  force = true
-
-[[redirects]]
-  from = "/smart-grocery-shopping-app/functions/*"
-  to = "https://smart-grocery-shopping-app.netlify.app/.netlify/functions/:splat"
-  status = 200
-  force = true
-  headers = { Host = "smart-grocery-shopping-app.netlify.app" } -->
